@@ -160,6 +160,7 @@ lighter making things easier to read.
 * (bug 8711) Stop floats in previews from spilling into edit area
 * (bug 8535) Allow certain vertical alignment attributes to be used as image
   keywords
+* (bug 6987) Allow perrow, widths, and heights attributes for <gallery>
 
 
 == Languages updated ==
